--- a/css/style2.css
+++ b/css/style2.css
@@ -26,7 +26,7 @@ header h1{
 
   .content {
     grid-area: content;
-    background-image: url('/img/books.jpg');
+    background-image: url('/img/books.gif');
     background-size: cover;
     height: 500px;
     margin-bottom: 0px;
