--- a/style2.css
+++ b/style2.css
@@ -57,7 +57,7 @@ header h1{
       font-size: 26px;
       margin-top:90px;
       font-weight: bold;
-      text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px, #000 0px 0px 1px,  #000 0px 0px 1px,   #000 0px 0px 1px;
+      text-shadow: #ffffff 0px 0px 1px,   #ffffff 0px 0px 1px,   #ffffff 0px 0px 1px, #ffffff 0px 0px 1px,  #ffffff 0px 0px 1px,   #000 0px 0px 1px;
   }
 
   
