--- a/style3.css
+++ b/style3.css
@@ -16,11 +16,11 @@
       "footer footer"
 }
 
-@media only screen and (min-width:640px){
+@media screen and (min-width:640px){
     .wrapper {
         display: grid;
         margin:0 auto;
-        width: 500px;
+        width: 400px;
         grid-column-gap: 0;
         grid-row-gap: 0px;
         grid-template-columns: 1fr 1fr;
@@ -51,9 +51,23 @@
         font-size:16px;
         color: white;
     }
+
+    .content{
+        grid-area: content;
+        grid-column:1/3;
+    }
+    
+    .wrapper .content .form{
+        border: 3px solid #458b74;
+        background-color:#ccc;   
+    }
+    .wrapper .content .form form #username, .wrapper .content .form form #password{
+        padding: 5px;
+                
+    }
 }
 
-@media only screen and (min-width:640px){
+@media only screen and (min-width:1000px){
     .wrapper {
         display: grid;
         margin:0 auto;
@@ -88,6 +102,7 @@
         font-size:16px;
         color: white;
     }
+    
 }
 
 a{
@@ -206,6 +221,11 @@ a{
     background-color: white;
     color: #5e9482;
 }
+
+.content .form form #username:focus, .content .form form #password:focus{
+    box-shadow: 3px 3px 10px  #5e9482;
+}
+
 
 .footer{
     grid-row: 4;
