--- a/css/style4.css
+++ b/css/style4.css
@@ -8,7 +8,9 @@
     grid-template-areas:
       "nav nav"
       "content content"
-      "footer footer"
+      "displayi displayi"
+      "addbook addbook"
+      "footer footer";
 }
 
 a{
@@ -50,7 +52,7 @@ a{
     grid-column: 1/3;
     width: 100px;
     height:100px;
-    background-color: black;
+    background-color: #cccccc;
     margin-top: 70px;
     border-radius:50%;
     margin: 0 auto;
@@ -74,6 +76,52 @@ a{
     padding:5px;
    
 }
+.content .content-head .book-add a, .book-view a, .book-borrow a{
+   display: block;
+}
+
+#addBook{
+    display: none;
+    grid-area: "addbook";
+    grid-column: 1/3;
+    grid-row: 4;
+    width:80%;
+    height:250px;
+    margin: 10px auto;
+    border: 2px solid orange;
+    background-color: #cccccc;
+    border-radius:5px;
+}
+#addBook form {
+    width: 90%;
+    margin: 5px 0 0 30px;
+}
+
+#addBook form input{
+    width: 80%;
+    height: 25px;
+    margin: 5px auto;
+}
+
+#addBook form div{
+    display: inline-block;
+    margin:5px 0 0 30px;
+    border: 2px solid #cccccc;
+    padding:5px;
+    background-color: orange;
+}
+#displayitem{
+    grid-area: "displayi";
+    grid-column: 1/3;
+    width:80%;
+    height:200px;
+    margin: 30px auto;
+    border: 2px solid orange;
+    background-color: #cccccc;
+    border-radius:5px;
+}
+
+
 .footer{
     grid-row: 5;
     grid-column: 1/3;
@@ -82,5 +130,5 @@ a{
     background-color: orange;
     line-height: 30px;
     color: white;
-    margin-top:300px;
+    margin-top:30px;
 }
