--- a/css/style4.css
+++ b/css/style4.css
@@ -44,8 +44,8 @@ a{
 .content{
     display: grid;
     grid-area: content;
-    grid-template-columns: 1fr 2fr;
-    margin-top: 50px;
+    grid-template-columns: 1fr 1fr;
+    margin: 30px auto;
 }
 
 .content .profile-img{
@@ -53,42 +53,44 @@ a{
     width: 100px;
     height:100px;
     background-color: #cccccc;
-    margin-top: 70px;
+    margin-top: 20px;
     border-radius:50%;
     margin: 0 auto;
 }
 .content .content-head{
-    width:300px;
-    grid-column: 1/4;
-    grid-row:3;
-    margin-top: 30px;
-    margin-left: 10px;
+    width:100%;
+    grid-column: 1/3;
+    grid-row:2;
+    margin: 40px auto;
     line-height: 30px;
 }
 
 .content .content-head .book-add, .book-view, .book-borrow{
-    
-    border:2px solid black;
+    width: 40px;
+    border:2px solid white;
     text-align: center;
     display:inline-block;
-    font-size: 14px;
-    margin-left:40px;
+    font-size: 12px;
     padding:5px;
+    background-color:blue;
+
    
 }
 .content .content-head .book-add a, .book-view a, .book-borrow a{
    display: block;
+   color:white;
 }
 
 #addBook{
     display: none;
     grid-area: "addbook";
     grid-column: 1/3;
-    grid-row: 4;
+    grid-row: 3;
     width:80%;
     height:250px;
     margin: 10px auto;
-    border: 2px solid orange;
+    border-bottom: 2px solid orange;
+    border-top: 2px solid orange;
     background-color: #cccccc;
     border-radius:5px;
 }
@@ -115,20 +117,21 @@ a{
     grid-column: 1/3;
     width:80%;
     height:200px;
-    margin: 30px auto;
-    border: 2px solid orange;
+    margin: 10px auto;
+    border-bottom: 2px solid orange;
+    border-top: 2px solid orange;
     background-color: #cccccc;
     border-radius:5px;
 }
 
 
 .footer{
-    grid-row: 5;
+    grid-row: 4;
     grid-column: 1/3;
     text-align: center;
     height: 30px;
     background-color: orange;
     line-height: 30px;
     color: white;
-    margin-top:30px;
+    margin-top:5px;
 }
